--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        p{
-            color: white;
-            background-color: green;
-            font-size: 18px;
-        }
-    </style>
+  <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
-    <div>style me via external method</div>
-    <p>I would like to be styled by the internal method,please.</p>
-    <button style="background-color: orange;font-size: 18px;">inline method</button>
-</body>
+    <title>Class and ID Selectors</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <p class="odd">Number 1 - I'm a class!</p>
+    <div id="two">Number 2 - I'm one ID.</div>
+    <p class="odd adjust-font-size">Number 3 - I'm a class, but cooler!</p>
+    <div id="four" class="adjust-font-size">Number 4 - I'm another ID.</div>
+    <p class="odd">Number 5 - I'm a class!</p>
+  </body>
 </html>
