--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="odd">Number 1 - I'm a class!</p>
-    <div id="two">Number 2 - I'm one ID.</div>
-    <p class="odd adjust-font-size">Number 3 - I'm a class, but cooler!</p>
-    <div id="four" class="adjust-font-size">Number 4 - I'm another ID.</div>
-    <p class="odd">Number 5 - I'm a class!</p>
+    <button class= "read">click me!</button>
+    <button class="unread">no click me!</button>
   </body>
 </html>
